--- a/FinalAndroidSmartHome/app/src/main/res/layout/activity_main.xml
+++ b/FinalAndroidSmartHome/app/src/main/res/layout/activity_main.xml
@@ -1,38 +1,25 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:id="@+id/drawer_layout"
     android:layout_height="match_parent"
-    tools:openDrawer="start"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:orientation="vertical"
     tools:context=".MainActivity">
-
-   <LinearLayout
-       android:layout_width="wrap_content"
-       android:layout_height="match_parent"
-       android:orientation="vertical">
-       <com.google.android.material.appbar.AppBarLayout
-           android:layout_width="match_parent"
-           android:layout_height="wrap_content">
-           <androidx.appcompat.widget.Toolbar
-               android:id="@+id/toolbar"
-               android:background="#FFFFFF"
-               android:layout_width="match_parent"
-               android:layout_height="50dp"/>
-       </com.google.android.material.appbar.AppBarLayout>
-       <FrameLayout
-           android:id="@+id/frame_layout"
-           android:layout_width="match_parent"
-           android:layout_height="match_parent">
-       </FrameLayout>
-   </LinearLayout>
-    <com.google.android.material.navigation.NavigationView
-        android:id="@+id/navigation_view"
-        app:headerLayout="@layout/layout_header_nav"
-        android:layout_width="wrap_content"
-        app:menu="@menu/menu_navgation"
-        android:layout_gravity="start"
-        android:layout_height="match_parent"/>
-
-</androidx.drawerlayout.widget.DrawerLayout>
+    <FrameLayout
+        android:id="@+id/frame_layout"
+        android:layout_weight="1"
+        android:layout_width="match_parent"
+        android:layout_height="0dp">
+    </FrameLayout>
+    <com.etebarian.meowbottomnavigation.MeowBottomNavigation
+        app:mbn_circleColor="@color/white"
+        app:mbn_selectedIconColor="#3c415c"
+        app:mbn_countTextColor="@color/white"
+        app:mbn_countBackgroundColor="#ff6f00"
+        app:mbn_defaultIconColor="@color/white"
+        app:mbn_backgroundBottomColor="#3c415e"
+        android:id = "@+id/bottomNavigation"
+        android:layout_width="match_parent"
+        android:layout_height="70dp" />
+</LinearLayout>
